@@ -117,7 +117,6 @@
              (abbrev-mode t)))
 
 (require 'gdb-ui)
-(setq gdb-many-windows t)
 (defun gdb-or-gud-go ()
   "if gdb isn't running; run gdb, else call gud-go"
   (interactive)
@@ -127,12 +126,21 @@
            (with-current-buffer gud-comint-buffer (eq gud-minor-mode 'gdba)))
       (gud-call (if gdb-active-process "continue" "run") "")
     (gdb (gud-query-cmdline 'gdb))))
+(defun gud-break-remove ()
+  "Set/clear breakpoin."
+  (interactive)
+  (save-excursion
+    (if (eq (car (fringe-bitmaps-at-pos (point))) 'breakpoint)
+        (gud-remove nil)
+      (gud-break nil))))
+(setq gdb-many-windows t)
 (global-set-key [f5] 'gdb-or-gud-go)
 (global-set-key [f7] '(lambda () (interactive) (compile compile-command)))
 (global-set-key [f8] 'gud-print)
 (global-set-key [C-f8] 'gud-pstar)
-(global-set-key [f9] 'gud-break)
-(global-set-key [C-f9] 'gud-remove)
+(global-set-key [f9] 'gud-break-remove)
+;; (global-set-key [f9] 'gud-break)
+;; (global-set-key [C-f9] 'gud-remove)
 (global-set-key [f10] 'gud-next)
 (global-set-key [C-f10] 'gud-until)
 (global-set-key [f11] 'gud-step)
