@@ -1,6 +1,7 @@
 2009-12-04  Meteor Liu  <meteor1113@gmail.com>
 
 	* init-basic.el (gdb-or-gud-go): Add (gdb-or-gud-go).
+	(gud-break-remove): Add (gud-break-remove).
 
 	* init-site.el: In terminal, don't active highlight-change-mode.
 
